# cxy

./: .gitignore  AGENTS.md  CMakeLists.txt  PROMPT.md  README.md  test_eof  test_eof.c
.cache/clangd/index/: alloc.h.2D8F40928C478714.idx  amalgamate.c.F6CABE8DDE6FDD13.idx  api.c.96582511B69FBD1F.idx  args.c.277B882237CA9493.idx  args.h.CF71759ECD4DE92A.idx  array.c.26C9C0CA6E80D4AD.idx  array.c.6BA29E598AA78B62.idx  array.h.BBAB5DA303A49DDB.idx  assign.c.B0D957DE7906DA2B.idx  ast.c.64F95FFBCD5DF2B6.idx  ast.c.E6648DA2CAE0D77E.idx  ast.cpp.05E527CA11D5FD4C.idx  ast.cpp.1B28174235C6A685.idx  ast.h.2181E0B3AEB48771.idx  ast.h.BE28CAD64CCFCAF4.idx  ast.hpp.2B6F48081AE367C3.idx  ast.hpp.DD75B94F1A11C035.idx  binary.c.175EB221D804A63B.idx  binary.c.5CC1CFE9DD009CF3.idx  bind.c.0C4512BE0FFDE9FB.idx  bind.h.ADD6C143FF1C4CF5.idx  builtins.c.818E2B61DFF59E8A.idx  builtins.c.8968B7A85E07254C.idx  builtins.h.8FBDC205F26116FC.idx  c-import-stub.c.F2EFF254B5E21BCA.idx  c.h.46C39EC41B5E6E72.idx  cJSON.c.5E10726975943457.idx  cJSON.h.E56234EBF651D272.idx  call.c.3A9F219B85EB38AE.idx  capture.c.D725F4FB9198A335.idx  capture.h.15CDE26E29DF36AA.idx  cast.c.FAF6D68B30108D12.idx  cc.c.C2AA908A9F5E6CE9.idx  cc.h.CBE7B864CE509E8E.idx  check.c.4BDA6A3DF9E7F164.idx  check.h.474ECE5DEE0A1C37.idx  class.c.241E4824B78A1B50.idx  closure.c.492A82B414384EC6.idx  closure.c.FE8B9206862944B2.idx  codec.h.3D03D7073C29B2E7.idx  (+177 more)
.github/workflows/: dev.alpine.yml  dev.ubuntu.yml  release.yml  ubuntu.yml
.woodpecker/: build.yml
.zed/: debug.json
benchmarks/: nbodies.cxy
docker/: Dockerfile.alpine  Dockerfile.alpine.cxy  Dockerfile.alpine.dev  Dockerfile.alpine.local  Dockerfile.ubuntu  Dockerfile.ubuntu.cxy  Dockerfile.ubuntu.dev  Dockerfile.ubuntu.local
docs/: FAST-CXY.md  PHASE0-PREPARATION.md  PROFILING-EXAMPLES.md  cxy-plugins.md  cxy-utils.md  docs.md  package.md  plugins.md
docs/stage/: GRAMMAR.md  SUMMARY.md  book.md
docs/stdlib/: args.md  json.md  redis.md  value.md  yaml.md
examples/: TOML.md  YAML.md  add.c  add.h  args.cxy  fetch.cxy  fs.cxy  hello.cxy  http.cxy  inc.cxy  jsonrpc.cxy  parser-plugin.c  parser-plugin.cxy  plugin.c  redis.cxy  sample.md  server.cxy  test.cxy  testing.cxy
examples/nested/: app.cxy  types.cxy
examples/nested/src/: helper.cxy
src/cxy/: language.cxy
src/cxy/core/: alloc.h  args.c  args.h  array.c  completion.c  e4c.h  features.h  format.c  format.h  hash.c  hash.h  hmap.h  htable.c  htable.h  log.c  log.h  mempool.c  mempool.h  sb.c  sb.h  strpool.c  strpool.h  synchronization.c  synchronization.h  utils.c  utils.h
src/cxy/driver/: c.h  driver.c  driver.h  main.c  options.c  options.h  plugin.c  plugin.h  profiling.c  profiling.h  stages.c  stats.c  stats.h
src/cxy/driver/c-import/: context.cpp  context.hpp  import.cpp
src/cxy/lang/: operations.h
src/cxy/lang/backend/c/: codegen.h  generate.c  pre.c
src/cxy/lang/frontend/: ast.c  ast.h  capture.c  decode.c  defines.c  encode.c  flag.h  lexer.c  lexer.h  module.c  operator.c  parser.c  parser.h  strings.c  strings.h  token.h  ttable.c  ttable.h  typegraph.c  typegraph.h  types.c  types.h  visitor.c
src/cxy/lang/middle/: builtins.c  builtins.h  mangle.c  n2e.c  scope.h
src/cxy/lang/middle/bind/: bind.h  discover.c  macro.c  resolve.c  scope.c
src/cxy/lang/middle/dump/: cxy.c  json.c  sexp.c  sexp.h  yaml.c
src/cxy/lang/middle/eval/: binary.c  comptime.c  enum.c  eval.c  eval.h  for.c  index.c  literal.c  macro.c  member.c  path.c  unary.c  xform.c
src/cxy/lang/middle/lower/: lower.c
src/cxy/lang/middle/mem/: finalize.c  manage.c
src/cxy/lang/middle/mir/: node.c
src/cxy/lang/middle/preprocess/: evaluate.c  preprocessor.c
src/cxy/lang/middle/sema/: array.c  assign.c  binary.c  builtins.c  call.c  cast.c  check.c  check.h  class.c  closure.c  enum.c  exception.c  for.c  function.c  generics.c  inheritance.c  match.c  member.c  new.c  node.c  path.c  struct.c  switch.c  type.c  unary.c  variables.c
src/cxy/lang/middle/shake/: shake.c  shake.h
src/cxy/lang/middle/simplify/: simplify.c
src/cxy/package/: async_tracker.c  cache.c  cache.h  cxyfile.c  cxyfile.h  env.c  env.h  gitops.c  gitops.h  install_scripts.c  install_scripts.h  registry.c  registry.h  resolver.c  resolver.h  types.c  types.h  validators.c  validators.h
src/cxy/package/commands/: add.c  async_cmd.c  async_cmd.h  build.c  clean.c  commands.h  create.c  dispatch.c  find_system.c  info.c  install.c  list.c  login.c  publish.c  remove.c  run.c  test.c  update.c  wait_for.c  yank.c
src/cxy/plugin/: plugin.c  plugin.h  shared.c
src/cxy/runtime/: builtins.cxy  epilogue.h  prologue.h
src/cxy/stdlib/: args.cxy  base64.cxy  buffer.cxy  build.cxy  coro.cxy  crypto.cxy  endian.cxy  fetch.cxy  fserver.cxy  hash.cxy  http.cxy  json.cxy  jsonrpc.cxy  jwt.cxy  list.cxy  log.cxy  net.cxy  os.cxy  path.cxy  redis.cxy  sqlite.cxy  ssl.cxy  tcp.cxy  testing.cxy  thread.cxy  time.cxy  trie.cxy  utils.cxy  value.cxy  vector.cxy  yaml.cxy
src/cxy/stdlib/native/evloop/: ae.c
src/cxy/stdlib/plugins/: jsonrpc.c
src/cxy/stdlib/yaml/: common.cxy  lexer.cxy  parser.cxy  serializer.cxy
src/cxy/utils/: async_tracker.c  async_tracker.h
src/cxy/utils/commands/: async_cmd.c  commands.h  dispatch.c  lock.c  wait_for.c
src/tools/: cxy-check-updates  cxy-download  download-cxy.sh  git-release  profile_analyze.rb
tests/lang/frontend/lexer/: strexpr.cxy
tests/lang/frontend/parser/: asm-errors.cxy  asm.cxy
tests/lang/parser/: parser_utils.cpp  parser_utils.hpp  test_for_loop.cpp  test_literals.cpp  test_optional_parens.cpp  test_primitive_types.cpp  test_switch_statement.cpp
tests/package/: test_cache.cpp  test_cxyfile_parser.cpp  test_gitops.cpp  test_resolver.cpp  test_scripts.cpp  test_semver.cpp  test_validators.cpp  test_version_constraints.cpp
tests/package/fixtures/: caching-example.yaml  circular_scripts.yaml  invalid_missing_fields.yaml  valid_complete.yaml  valid_minimal.yaml
tests/unit/: test_utils.cpp
tests/utils/: ast.cpp  ast.hpp  lexer.cpp  test_ast.cpp
tools/: analyze_profile.rb
(+11 files in other folders)
